--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'com.github.johnrengelman.shadow' version '1.2.4'
+    id 'com.github.johnrengelman.shadow' version '2.0.0'
 }
 
 group 'us.cyrien'
-version '1.0-SNAPSHOT'
-
+version '0.1.4'
 
 sourceCompatibility = 1.8
 
