--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'us.cyrien'
-version '0.1.8'
+version '0.1.10'
 
 sourceCompatibility = 1.8
 
@@ -13,21 +13,16 @@ repositories {
     mavenCentral()
     jcenter()
     mavenLocal()
-    maven {
-        url 'https://jitpack.io'
-    }
-    maven {
-        url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
-    }
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url 'https://nexus.wesjd.net/repository/thirdparty/' }
 }
 
 dependencies {
-    //<groupId>mkremins</groupId>
-    //  <artifactId>fanciful</artifactId>
-    //  <version>0.3.1</version>
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile 'com.github.mkremins:fanciful:master-SNAPSHOT'
+    compile 'net.wesjd:anvilgui:1.2.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.13-pre7-R0.1-SNAPSHOT'
 }
 
