--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -1,1 +1,7 @@
-PromptInProgress = &6You are still trying to complete a command. Type "cancel" to cancel
+PromptInProgress = &6You are still trying to complete a command. Type "cancel" to cancel.
+PromptCancel = CommandPrompter command execution canceled!
+CommandReloadSuccess = Successfully reloaded configuration!
+CommandPlayerOnly = &cOnly players can execute this command!
+CommandNoPerm = &cYou don't have permission to execute this command!
+CommandInvalidArgs = &cInvalid command argument!
+CommandInvalid = &c%s is not a CommandPrompter command!
