--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -5,3 +5,4 @@ CommandPlayerOnly = &cOnly players can execute this command!
 CommandNoPerm = &cYou don't have permission to execute this command!
 CommandInvalidArgs = &cInvalid command argument!
 CommandInvalid = &c%s is not a CommandPrompter command!
+PluginVersion = &6Current Version: &2&l%s
