Sync up project

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,3 +18,5 @@ commands:
 permissions:
   commandprompter.reload:
     description: Allow sender to reload plugin.
+  commandprompter.use:
+    description: Allow sender to use CommandPrompter argument feature.
