--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,14 @@ repositories {
     maven { url 'https://repo.lucko.me/' }
     maven { url 'https://libraries.minecraft.net'}
     maven { url "http://repo.dmulloy2.net/nexus/repository/public/" }
+    maven { url 'https://repo.codemc.org/repository/maven-public'}
     flatDir { dirs 'libs' }
 }
 
 dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    compile 'org.bstats:bstats-bukkit:1.5'
     compile name: 'anvilgui-1.2.3-SNAPSHOT'
     compile 'me.lucko:commodore:1.3'
     compileOnly 'com.mojang:brigadier:1.0.15'
@@ -48,6 +50,7 @@ processResources {
 shadowJar {
     archiveName = "CommandPrompter-${project.ext.fullVersion}.jar"
     relocate 'me.lucko.commodore', 'com.cyr1en.cp.commodore'
+    relocate 'org.bstats', 'com.cyr1en.cp.bstats'
 }
 
 artifacts {
