--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ targetCompatibility = 1.8
 
 project.ext.majorVersion = '0'
 project.ext.minorVersion = '1'
-project.ext.patchVersion = '17'
+project.ext.patchVersion = '18'
 project.ext.fullVersion = project.ext.majorVersion + '.' + project.ext.minorVersion + '.' + project.ext.patchVersion
 
 repositories {
@@ -38,6 +38,7 @@ dependencies {
     compile 'me.lucko:commodore:1.3'
     compileOnly 'com.mojang:brigadier:1.0.15'
     compileOnly 'org.spigotmc:spigot-api:1.15.1-R0.1-SNAPSHOT'
+    compileOnly name:'DeluxeMenu'
 }
 
 processResources {
