--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,19 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Java template
-# Compiled class file
-*.class
+### Gradle template
+.gradle
+/build/
 
-# Log file
-*.log
+# Ignore Gradle GUI config
+gradle-app.setting
 
-# BlueJ files
-*.ctxt
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Cache of project
+.gradletasknamecache
 
-# Package Files #
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
 ### macOS template
 # General
 .DS_Store
@@ -49,29 +41,58 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-### Gradle template
-.gradle
-/build/
+### Windows template
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Dump file
+*.stackdump
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+# Folder config file
+[Dd]esktop.ini
 
-# Cache of project
-.gradletasknamecache
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
 
-.idea/encodings.xml
-.idea/inspectionProfiles/
-.idea/libraries/Gradle__com_mojang_brigadier_1_0_14.xml
-.idea/libraries/Gradle__com_mojang_brigadier_1_0_15.xml
-.idea/libraries/Gradle__me_lucko_commodore_1_2.xml
-.idea/libraries/Gradle__org_spigotmc_spigot_api_1_13_pre7_R0_1_SNAPSHOT.xml
-.idea/libraries/Gradle__org_yaml_snakeyaml_1_21.xml
-.idea/vcs.xml
-.idea/workspace.xml
-src/test/
+# Windows shortcuts
+*.lnk
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen### Java template
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
