--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -1,6 +1,6 @@
 PromptInProgress = &6You are still trying to complete a command. Type "cancel" to cancel.
-PromptCancel = CommandPrompter command execution canceled!
-CommandReloadSuccess = Successfully reloaded configuration!
+PromptCancel = &6Command completion cancelled!
+CommandReloadSuccess = &aSuccessfully reloaded configuration!
 CommandPlayerOnly = &cOnly players can execute this command!
 CommandNoPerm = &cYou don't have permission to execute this command!
 CommandInvalidArgs = &cInvalid command argument!
