made messages pretty ;)

--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -4,5 +4,6 @@ CommandReloadSuccess = &aSuccessfully reloaded configuration!
 CommandPlayerOnly = &cOnly players can execute this command!
 CommandNoPerm = &cYou don't have permission to execute this command!
 CommandInvalidArgs = &cInvalid command argument!
+CommandUsage = &cCommand Usage: %s
 CommandInvalid = &c%s is not a CommandPrompter command!
-PluginVersion = &6Current Version: &2&l%s
+PluginVersion = &6Installed Version: &2&l%s
