--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,3 +17,6 @@ jobs:
       run: ./gradlew build
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
+      with:
+        name: CommandPrompter
+        path: builds/libs
