--- a/build.gradle
+++ b/build.gradle
@@ -23,55 +23,86 @@
  */
 
 plugins {
+    id "com.github.johnrengelman.shadow" version "7.0.0"
     id 'java'
-    id 'maven'
-    id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 
-group 'com.cyr1en'
-version '0.1-SNAPSHOT'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(16)
+    }
+}
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+PluginManifest manifest = [
+        name: 'CommandPrompter',
+        version: new Version(major: 0, minor: 2, patch: 0, fix: 0, classifier: 'DEV'),
+        author: 'CyR1en',
+        description: 'Perfect companion plugin for inventory UI menu.',
+        entry: 'com.cyr1en.commandprompter.CommandPrompter'
+]
 
-project.ext.majorVersion = '0'
-project.ext.minorVersion = '2'
-project.ext.patchVersion = '0'
-project.ext.fullVersion = project.ext.majorVersion + '.' + project.ext.minorVersion + '.' + project.ext.patchVersion
+group = 'com.cyr1en'
+version = manifest.version.toString()
 
 repositories {
     mavenCentral()
-    jcenter()
-    mavenLocal()
-    maven { url 'https://jitpack.io' }
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven { url 'https://repo.lucko.me/' }
-    maven { url 'https://libraries.minecraft.net'}
+    maven { url 'https://libraries.minecraft.net/' }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    compile 'com.github.cyr1en.kiso:kiso-mc:d674db0889'
-    compile 'com.github.cyr1en.kiso:kiso-utils:d674db0889'
-    compile 'org.bstats:bstats-bukkit:1.5'
-    compile 'com.github.CyR1en:AnvilGUI:ca30eea111'
-    compile 'me.lucko:commodore:1.8'
-    compileOnly 'com.mojang:brigadier:1.0.15'
-    compileOnly 'org.spigotmc:spigot-api:1.15.1-R0.1-SNAPSHOT'
+    implementation 'me.lucko:commodore:1.10'
+    implementation'com.github.cyr1en.kiso:kiso-mc:1.0.1'
+    implementation'com.github.cyr1en.kiso:kiso-utils:1.0.1'
+    compileOnly "org.spigotmc:spigot-api:1.17-R0.1-SNAPSHOT"
+}
+
+shadowJar {
+    dependencies {
+        exclude(dependency('com.mojang:brigadier'))
+    }
+
+    archiveBaseName.set("$project.name")
+    archiveClassifier.set(manifest.version.classifier)
+    archiveVersion.set(manifest.version.getFullVersion())
+
+    relocate 'me.lucko.commodore', 'com.cyr1en.commodore'
 }
 
 processResources {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
     from(sourceSets.main.resources.srcDirs) {
-        expand 'pluginVersion': project.ext.fullVersion
+        expand(
+                'projectName': manifest.name,
+                'projectVersion': version,
+                'projectAuthor': manifest.author,
+                'projectDescription': manifest.description,
+                'projectEntry': manifest.entry
+        )
         include 'plugin.yml'
     }
 }
 
-shadowJar {
-    archiveName = "CommandPrompter-${project.ext.fullVersion}.jar"
-    relocate 'me.lucko.commodore', 'com.cyr1en.cp.commodore'
-    relocate 'org.bstats', 'com.cyr1en.cp.bstats'
-}
-
 artifacts {
     archives shadowJar
+}
+
+class PluginManifest {
+    String name, author, description, entry
+    Version version
+}
+
+class Version {
+
+    String major, minor, patch, fix, classifier, full
+
+    String getFullVersion() {
+        full = "$major.$minor.$patch${(fix as Integer) > 0 ? ".$fix" : ''}"
+        return full
+    }
+
+    String toString() {
+        getFullVersion()
+    }
 }
