add permission back

--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -1,4 +1,5 @@
 PromptInProgress = &6You are still trying to complete a command. Type "cancel" to cancel.
+PromptNoPerm = &cYou don't have permission to use CommandPrompter.
 PromptPlayerOnly = &6CommandPrompter can only be used by a player.!
 PromptCancel = &6Command completion cancelled!
 CommandReloadSuccess = &aSuccessfully reloaded configuration!
