change SignPrompt process

--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -1,4 +1,7 @@
 PromptInProgress = &6You are still trying to complete a command. Type &c"%s"&6 to cancel.
+SignPromptMultiArg = &aSent a multi argument sign prompt. &6Do not erase any content and just add the response after the "&c:&6"
+SignPromptReminder = &aSent a sign prompt. Every line that you put will be combined into a single response separated by a space
+CompletedCommand = &6Command to execute: &3%s
 PromptNoPerm = &cYou don't have permission to use CommandPrompter.
 PromptPlayerOnly = &6CommandPrompter can only be used by a player.!
 PromptCancel = &6Command completion cancelled!
