--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -1,6 +1,6 @@
 PromptInProgress = &6You are still trying to complete a command. Type &c"%s"&6 to cancel.
-SignPromptMultiArg = &aSent a multi argument sign prompt. &6Do not erase any content and just add the response after the "&c:&6"
-SignPromptReminder = &aSent a sign prompt. Every line that you put will be combined into a single response separated by a space
+SignPromptMultiArg = &6Sent a multi argument sign prompt. Type the response after the &a&l:
+SignPromptReminder = &6Sent a sign prompt. Every line that you put will be combined into a single response separated by a space
 CompletedCommand = &6Command to execute: &3%s
 PromptNoPerm = &cYou don't have permission to use CommandPrompter.
 PromptPlayerOnly = &6CommandPrompter can only be used by a player.!
