add cancel command

--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -5,6 +5,7 @@ CompletedCommand = &6Command to execute: &3%s
 PromptNoPerm = &cYou don't have permission to use CommandPrompter.
 PromptPlayerOnly = &6CommandPrompter can only be used by a player.!
 PromptCancel = &6Command completion cancelled!
+CommandCancelNotInCompletion = &cYou are not in command completion.
 CommandReloadSuccess = &aSuccessfully reloaded configuration!
 CommandPlayerOnly = &cOnly players can execute this command!
 CommandNoPerm = &cYou don't have permission to execute this command!
