--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,5 @@ permissions:
     description: Allow sender to reload plugin.
   commandprompter.use:
     description: Allow sender to use CommandPrompter argument feature.
+  commandprompter.cancel:
+    description: Allow sender to cancel their own command completion.
