--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ repositories {
     maven { url 'https://repo.cyr1en.com/snapshots' }
     maven { url 'https://repo.dmulloy2.net/repository/public/' }
     maven { url 'https://repo.codemc.io/repository/maven-snapshots/' }
+    flatDir { dirs 'libs' }
 }
 
 dependencies {
@@ -64,6 +65,7 @@ dependencies {
     implementation 'org.bstats:bstats-bukkit:3.0.0'
     implementation 'com.github.stefvanschie.inventoryframework:IF:0.10.4'
     implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.4.0'
+    implementation fileTree(dir: 'libs', include: '*.jar')
 
     compileOnly "org.spigotmc:spigot-api:1.17-R0.1-SNAPSHOT"
     compileOnly 'com.comphenix.protocol:ProtocolLib:4.7.0'
