--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ api-version: 1.13
 
 commands:
   commandprompter:
-    aliases: [cp, cmdprompter, cmdprmptr, cmdp]
+    aliases: [cmdprompter, cmdp]
     description: General CommandPrompter commands
 
 permissions:
