hook into PuerkasChat

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: ${projectName}
 version: ${projectVersion}
 author: ${projectAuthor}
 description: ${projectDescription}
-softdepend: [ProtocolLib, VentureChat, SuperVanish]
+softdepend: [ProtocolLib, VentureChat, SuperVanish, PuerkasChat]
 
 main: ${projectEntry}
 api-version: 1.13
