--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,9 @@ jobs:
         distribution: temurin
         java-version: 16
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew clean build
+    - name: Publish to Kakuno
+      run: ./gradlew publish
     - name: Upload artifact
       uses: actions/upload-artifact@v2.3.1
       with:
