--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation 'me.lucko:commodore:2.0'
     implementation 'com.cyr1en:kiso-utils:1.6-SNAPSHOT'
     implementation 'com.cyr1en:kiso-mc:1.7-SNAPSHOT'
-    implementation 'net.wesjd:anvilgui:1.5.3-20220729.205419-10'
+    implementation 'net.wesjd:anvilgui:1.5.3-SNAPSHOT'
     implementation 'org.bstats:bstats-bukkit:3.0.0'
     implementation 'com.github.stefvanschie.inventoryframework:IF:0.10.6'
     implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.4.0'
