--- a/build.gradle
+++ b/build.gradle
@@ -68,13 +68,13 @@ dependencies {
     implementation 'org.bstats:bstats-bukkit:3.0.0'
     implementation 'com.github.stefvanschie.inventoryframework:IF:0.10.8'
     implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.4.0'
-    implementation "net.kyori:adventure-text-serializer-legacy:4.13.1"
-    implementation "net.kyori:adventure-text-serializer-plain:4.13.1"
     implementation fileTree(dir: 'libs', include: '*.jar')
 
     compileOnly fileTree(dir: 'libs/compileonly', include: '*.jar')
 
     compileOnly 'me.clip:placeholderapi:2.11.2'
+    compileOnly "net.kyori:adventure-text-serializer-legacy:4.13.1"
+    compileOnly "net.kyori:adventure-text-serializer-plain:4.13.1"
     compileOnly "org.spigotmc:spigot-api:1.19.4-R0.1-SNAPSHOT"
     compileOnly 'com.github.LeonMangler:SuperVanish:6.2.6-4'
     compileOnly 'com.comphenix.protocol:ProtocolLib:4.7.0'
@@ -99,7 +99,6 @@ shadowJar {
     relocate 'net.wesjd.anvilgui', 'com.cyr1en.anvilgui'
     relocate 'me.lucko.commodore', 'com.cyr1en.commodore'
     relocate 'org.fusesource.jansi', 'com.cyr1en.jansi'
-    relocate 'net.kyori.adventure', 'com.cyr1en.adventure'
     relocate 'org.bstats', 'com.cyr1en.bstats'
 }
 
