--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -11,3 +11,4 @@ CommandPlayerOnly = &cOnly players can execute this command!
 CommandNoPerm = &cYou don't have permission to execute this command!
 CommandInvalid = &c%s is not a CommandPrompter command!
 PluginVersion = &6Installed Version: &2&l%s
+PCMOutOfBounds = &cThe index &6%s&c is out of bounds!
