--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,13 @@
 name: Java CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+
+  release:
+    types:
+      - created
 
 jobs:
   build:
@@ -8,21 +15,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2.4.0
-    - name: Set up JDK
-      uses: actions/setup-java@v2.5.0
-      with:
-        distribution: temurin
-        java-version: 17
-    - name: Build with Gradle
-      run: ./gradlew clean build
-    - name: Publish to Kakuno
-      env:
-        KAKUNO_USER: ${{ secrets.KAKUNO_USER }}
-        KAKUNO_TOKEN: ${{ secrets.KAKUNO_TOKEN }}
-      run: ./gradlew publish
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2.3.1
-      with:
-        name: CommandPrompter
-        path: build/libs
+      - uses: actions/checkout@v2.4.0
+      - name: Set up JDK
+        uses: actions/setup-java@v2.5.0
+        with:
+          distribution: temurin
+          java-version: 17
+      - name: Build with Gradle
+        run: ./gradlew clean build
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: CommandPrompter
+          path: build/libs
+
+  publish:
+    needs: build
+    if: github.event_name == 'release'
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2.4.0
+      - name: Set up JDK
+        uses: actions/setup-java@v2.5.0
+        with:
+          distribution: temurin
+          java-version: 17
+      - name: Publish to Kakuno
+        env:
+          KAKUNO_USER: ${{ secrets.KAKUNO_USER }}
+          KAKUNO_TOKEN: ${{ secrets.KAKUNO_TOKEN }}
+        run: ./gradlew publish
