--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.13.1"
     compileOnly "net.kyori:adventure-text-serializer-plain:4.13.1"
     compileOnly "org.spigotmc:spigot-api:1.20-R0.1-SNAPSHOT"
-    compileOnly 'com.github.LeonMangler:SuperVanish:6.2.6-4'
+    compileOnly 'com.github.LeonMangler:SuperVanish:6.2.17'
     compileOnly 'com.comphenix.protocol:ProtocolLib:4.7.0'
     compileOnly 'com.github.mbax:VanishNoPacket:3.22'
     compileOnly 'org.jetbrains:annotations:23.0.0'
