--- a/build.gradle
+++ b/build.gradle
@@ -66,12 +66,13 @@ dependencies {
     implementation 'com.cyr1en:kiso-mc:1.8-SNAPSHOT'
     implementation 'net.wesjd:anvilgui:1.6.6-SNAPSHOT'
     implementation 'org.bstats:bstats-bukkit:3.0.0'
-    implementation 'com.github.stefvanschie.inventoryframework:IF:0.10.9'
+    implementation 'me.lucko:jar-relocator:1.7'
     implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.4.0'
     implementation fileTree(dir: 'libs', include: '*.jar')
 
     compileOnly fileTree(dir: 'libs/compileonly', include: '*.jar')
 
+    compileOnly 'com.github.stefvanschie.inventoryframework:IF:0.10.9'
     compileOnly 'me.clip:placeholderapi:2.11.2'
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.13.1"
     compileOnly "net.kyori:adventure-text-serializer-plain:4.13.1"
