--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,7 +11,8 @@ on:
 
 jobs:
   build:
-
+    if: github.event_name != 'release'
+    
     runs-on: ubuntu-latest
 
     steps:
@@ -30,7 +31,6 @@ jobs:
           path: build/libs
 
   publish:
-    needs: build
     if: github.event_name == 'release'
 
     runs-on: ubuntu-latest
@@ -50,8 +50,6 @@ jobs:
       - name: Get Previous Tag
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
-        with:
-          fallback: "2.0.0"
       - name: Upload Release Artifact
         env:
           GH_TOKEN: ${{ secrets.ACCESS_TOKEN }}
