finalize console delegate

--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -10,5 +10,9 @@ CommandReloadSuccess = &aSuccessfully reloaded configuration!
 CommandPlayerOnly = &cOnly players can execute this command!
 CommandNoPerm = &cYou don't have permission to execute this command!
 CommandInvalid = &c%s is not a CommandPrompter command!
+DelegateInvalidArgs = &cInvalid arguments for console delegate command!
+DelegateUsage = &6Usage: &3%s
+DelegateInvalidPlayer = &cThe player &6%s&c is not online!
+DelegateConsoleOnly = &cThis command can only be executed by the console!
 PluginVersion = &6Installed Version: &2&l%s
 PCMOutOfBounds = &cThe index &6%s&c is out of bounds!
